added css and html for a popup prompt

--- a/style.css
+++ b/style.css
@@ -118,6 +118,88 @@ button[disabled] {
   overflow: hidden;
 }
 
+.prompt-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: hsl(0, 0%, 100%);
+  width: 600px;
+  max-width: 80%;
+}
+
+.prompt-card.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.prompt-header {
+  font-size: 18px;
+  padding: 30px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: hsl(206, 17%, 28%);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
+}
+
+.prompt-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 22px;
+}
+
+.prompt-title {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.prompt-body {
+
+}
+
+.prompt-footer {
+  text-align: center;
+}
+
+.prompt-btn {
+  border: none;
+  background-color: hsl(360, 91%, 36%);
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
+    0px;
+  color: hsl(0, 0%, 100%);
+  display: inline-block;
+  font-size: 22px;
+  line-height: 22px;
+  margin: 16px 16px 16px 20px;
+  padding: 14px 34px;
+  text-align: center;
+  cursor: pointer;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+  transition: 200ms ease-in-out;
+}
+
+#overlay.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
